Build from descriptions

--- a/source/benchmarks/_graphs.html.haml
+++ b/source/benchmarks/_graphs.html.haml
@@ -21,7 +21,7 @@
 
 - value_by_version_by_job.each_with_index do |(job, value_by_version), index|
   :ruby
-    versions = value_by_version.keys.reject { |v| v.end_with?(' --jit') }
+    versions = description_by_version.map(&:first).reject { |v| v.end_with?(' --jit') || !value_by_version.key?(v) }
     vm_values = versions.map { |version| value_by_version[version] }
     jit_values = versions.map { |version| value_by_version["#{version} --jit"] }
 
