Enable zoom on a result graph

--- a/source/benchmarks/_graphs.html.haml
+++ b/source/benchmarks/_graphs.html.haml
@@ -64,6 +64,7 @@
 
       Highcharts.chart(graphElement.attr('id'), {
         chart: {
+          zoomType: 'x',
           type: type
         },
         title: {
