--- a/source/benchmarks/_graphs.html.haml
+++ b/source/benchmarks/_graphs.html.haml
@@ -80,7 +80,7 @@
           categories: graphElement.data('versions'),
           labels: {
             formatter: function() {
-              return /Ruby: ([^< ]+)/.exec(this.value)[1]
+              return /Ruby: ([^<T ]+)/.exec(this.value)[1]
             }
           }
         },
