--- a/source/benchmarks/optcarrot/commits.html.haml
+++ b/source/benchmarks/optcarrot/commits.html.haml
@@ -11,6 +11,7 @@
         description_by_version: results.fetch('descriptions'),
         metrics_unit: results.fetch('metrics_unit'),
         width_percent: 100,
+        height_pixel: 500,
         chart_type: 'line',
         show_table: true,
       }
