Fix missing links in index.html
https://github.com/benchmark-driver/benchmark-driver.github.io/pull/1

Co-Authored-By: Alan Guo Xiang Tan <gxtan1990+github@gmail.com>

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -27,7 +27,7 @@
       .container.text-center
         %p.text-muted
           Developed by #{link_to '@k0kubun', 'https://github.com/k0kubun'}.
-          See the source code at #{link_to 'https://github.com/benchmark-driver/benchmark-driver.github.io'}.
+          See the source code at #{link_to 'benchmark-driver/sky2-viewer', 'https://github.com/benchmark-driver/sky2-viewer'}.
           %br
           This is built to test edge features of benchmark_driver.gem.
-          You may want to see #{link_to 'https://rubybench.org'} as well.
+          You may want to see #{link_to 'RubyBench', 'https://rubybench.org'} as well.
