--- a/source/benchmarks/rubykon/releases.html.haml
+++ b/source/benchmarks/rubykon/releases.html.haml
@@ -1,11 +1,11 @@
 .benchmark_page
   .text-center
-    %h1 Optcarrot: Ruby Releases
+    %h1 Rubykon: Ruby Releases
 
-    = github_link 'mame/optcarrot'
+    = github_link 'PragTob/rubykon'
 
     :ruby
-      results = fetch_results('optcarrot/benchmark.yml', releases: true)
+      results = fetch_results('rubykon-benchmark.yml', releases: true)
       locals = {
         value_by_version_by_job: results.fetch('results'),
         description_by_version: results.fetch('descriptions'),
