--- a/source/benchmarks/rubykon/commits.html.haml
+++ b/source/benchmarks/rubykon/commits.html.haml
@@ -1,16 +1,18 @@
 .benchmark_page
   .text-center
-    %h1 Optcarrot: Ruby Releases
+    %h1 Rubykon: Ruby Commits
 
-    = github_link 'mame/optcarrot'
+    = github_link 'PragTob/rubykon'
 
     :ruby
-      results = fetch_results('optcarrot/benchmark.yml', releases: true)
+      results = fetch_results('rubykon-benchmark.yml', releases: false)
       locals = {
         value_by_version_by_job: results.fetch('results'),
         description_by_version: results.fetch('descriptions'),
         metrics_unit: results.fetch('metrics_unit'),
-        width_percent: 70,
-        chart_type: 'column',
+        width_percent: 100,
+        height_pixel: 560,
+        chart_type: 'line',
+        show_table: true,
       }
     = partial '../graphs', locals: locals
