Revert "Add Rubykon"
This reverts commit dd86d36a7fb36146a34853c5d43c8df45ec6140a.

--- a/source/benchmarks/optcarrot/releases.html.haml
+++ b/source/benchmarks/optcarrot/releases.html.haml
@@ -2,7 +2,7 @@
   .text-center
     %h1 Optcarrot: Ruby Releases
 
-    = github_link 'mame/optcarrot'
+    = github_link 'benchmark-driver/optcarrot'
 
     :ruby
       results = fetch_results('optcarrot/benchmark.yml', releases: true)
