--- a/source/benchmarks/_table.html.haml
+++ b/source/benchmarks/_table.html.haml
@@ -1,6 +1,6 @@
 :ruby
   results = [
-    { name: 'Ruby Method', prefix: 'ruby_method', description: 'Ruby method benchmark set created by Watson1978', categories: %w[Array Enumerable Hash Object Range String Time] },
+    { name: 'Ruby Method', prefix: 'ruby_method', description: 'Ruby method benchmark set created by Watson1978', categories: %w[Array Enumerable Hash Object Range Time] },
     { name: 'Optcarrot',   prefix: 'optcarrot',   description: 'NES emulator created by Yusuke Endoh' },
     { name: 'Rubykon',     prefix: 'rubykon',     description: 'Go AI created by Tobias Pfeiffer' },
     { name: 'MJIT',        prefix: 'mjit',        description: 'Benchmark set created by Vladimir Makarov' },
