--- a/source/benchmarks/optcarrot/commits.html.haml
+++ b/source/benchmarks/optcarrot/commits.html.haml
@@ -5,7 +5,7 @@
     = github_link 'benchmark-driver/optcarrot'
 
     :ruby
-      results = fetch_results('optcarrot/benchmark.yml', releases: false)
+      results = fetch_results('optcarrot/benchmark*.yml', releases: false)
       locals = {
         value_by_version_by_job: results.fetch('results'),
         description_by_version: results.fetch('descriptions'),
