Show benchmark_3000 in releases

--- a/source/benchmarks/optcarrot/releases.html.haml
+++ b/source/benchmarks/optcarrot/releases.html.haml
@@ -5,7 +5,7 @@
     = github_link 'mame/optcarrot'
 
     :ruby
-      results = fetch_results('optcarrot/benchmark.yml', releases: true)
+      results = fetch_results('optcarrot/benchmark*.yml', releases: true)
       locals = {
         value_by_version_by_job: results.fetch('results'),
         description_by_version: results.fetch('descriptions'),
